# src/user/dto/user-change-password-response.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+export class UserChangePasswordResponseDto {
+    @ApiProperty({
+    description: 'Сообщение о результате операции',
+    example: 'Пароль успешно изменен',
+    type: String,
+  })
+  message: string;
+}
